# TTsavebot

./: pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
tests/integration/: test_middlewares_and_handlers.py
tests/unit/: test_check_access_use_case.py  test_video_request.py  test_ytdlp_downloader.py
video_bot/: __init__.py  config.py
video_bot/core/: __init__.py  errors.py
video_bot/core/entities/: __init__.py  downloaded_video.py  enums.py  user.py  video_request.py
video_bot/core/interfaces/: __init__.py  access_repository.py  download_log_repository.py  file_storage.py  video_downloader.py
video_bot/core/use_cases/: __init__.py  admin_allow_user.py  admin_deny_user.py  admin_get_logs.py  admin_get_stats.py  check_access.py  download_video.py
video_bot/infrastructure/: __init__.py
video_bot/infrastructure/database/: access_repository.py  bootstrap.py  download_log_repository.py  sqlite.py
video_bot/infrastructure/downloaders/: __init__.py  ytdlp_downloader.py
video_bot/infrastructure/storage/: __init__.py  local_file_storage.py
video_bot/presentation/handlers/: __init__.py  admin.py
video_bot/presentation/keyboards/: __init__.py  admin_panel.py
video_bot/presentation/middlewares/: auth.py  superadmin.py
